Fixing alignment issue on about pg.

--- a/src/AboutPage/AboutPage.scss
+++ b/src/AboutPage/AboutPage.scss
@@ -22,16 +22,15 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: center;
             padding-left: 40px;
-
+            
             @media screen and (max-width: 767px) {
                 padding-left: 0;
             }
 
             .about-header {
                 font-size: 2.5rem;
-                
+                text-align: left;
                 @media screen and (max-width: 767px) {
                     text-align: center;
                 }
